src/objects/SingleFilterInfoWrapper__c.object
<CustomObject>
    <fields>
        <fullName>Filter_Name__c</fullName>
        <label>Filter Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value_Decimal__c</fullName>
        <label>Value Decimal</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_String__c</fullName>
        <label>Value String</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SingleFilterInfoWrapper</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>SingleFilterInfoWrapper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SingleFilterInfoWrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>